Fixed overlapping buttons on phones in the schedule page

--- a/src/css/schedule.css
+++ b/src/css/schedule.css
@@ -4,10 +4,10 @@ section {
 }
 h1 {
     line-height: 100px;
-    height: 120px;
-    font-size: 80px;
+    height: 100px;
+    font-size: 50px;
     text-align: center;
-    width: 50%;
+    width: 40%;
     margin:auto;
     margin-top: 150px !important;
     font-family: 'Oswald';
@@ -22,11 +22,11 @@ h1 {
     opacity: 0.9;
     transition-duration: 300ms; }
 h1:hover{
-    width: 51%;
+    width: 45%;
 }
 section div {
-    height: 300px;
-    width: 80%;
+    height: 250px;
+    width: 75%;
     margin:auto;
     box-shadow:0 0 20px 5px rgba(0, 0, 0, 0.733);
     border-radius: 15px;
@@ -41,15 +41,15 @@ section div {
 }
 section h2{
     text-align: center;
-    padding: 30px;
-    font-size: 50px;
+    padding: 2%;
+    font-size: 40px;
     color: #E6E6FA;
     box-shadow:0 0 20px 5px rgba(0, 0, 0, 0.541);
     font-family: 'Changa', sans-serif;
 }
 section h3 {
     text-align: center;
-    font-size: 40px;
+    font-size: 35px;
     padding: 10px;
     margin-top: 35px;
     color: white;
@@ -65,11 +65,13 @@ section a {
   -ms-border-radius: 3px;
   -o-border-radius: 3px;
   background-color: red;
-  padding: 10px;
+  padding-right: 5%;
+  padding-left:5%;
   transition-duration: 300ms;
   margin-left: 30px;
 
 }
 section a:hover {
  background-color: rgba(255, 41, 41, 0.884) ;
+
 }
